# zvad

./: CMakeLists.txt  README.md  zvad.cpp
c_example/: CMakeLists.txt  example.c  mpf_activity_detector.c
e_silero/: CMakeLists.txt  silero_engine.cpp
include/: zmodel.h  zvad.h
pybind/: CMakeLists.txt  py_zvad.cpp
python_example/: silence_trim.py  wav_example.py
